# seds500-graduation-project

./: .gitignore  README.md  pyproject.toml
docs/: SEDS500-Project-Report-Umut-Akin.docx  concepts.md  defense-qa-cheatsheet.md  experiment-plan-manufacturing.md  instructor-meeting-2026-01-13.md  manufacturing-duration-dataset.md  paper-analysis.md  project-report-revised.md  project-report-updated.md  project-report.md  thesis-summary.md
notebooks/: 01_diffusion_explained.ipynb
scripts/: extract_pdf.py
src/: __init__.py  analyze_data.py  compare_all_methods.py  compare_augmentation_vs_replacement.py  create_word_report.py  create_word_report_v2.py  diffusion.py  diffusion_tabddpm.py  evaluate.py  evaluate_adult.py  evaluate_adult_conditional.py  evaluate_manufacturing.py  evaluate_manufacturing_baseline.py  evaluate_ozel.py  evaluate_ozel_baseline.py  evaluate_ozel_rich.py  evaluate_ozel_rich_baseline.py  evaluate_production_full.py  evaluate_production_numeric.py  fill_template.py  final_comparison.py  finalize_report.py  generate_figures.py  models.py  prepare_data.py  prepare_manufacturing_data.py  prepare_ozel_data.py  prepare_ozel_rich_data.py  prepare_ozel_rich_data_v3.py  prepare_ozel_rich_data_v5.py  prepare_production_data.py  privacy_test.py  privacy_test_exp018.py  report.py  test_experiment_018.py  test_experiment_019.py  test_v2_model.py  test_v2_rescaled.py  test_v3_replacement.py  test_v5_replacement.py  (+16 more)
todo/: 001-multinomial-diffusion.md  002-technical-explanation.md  003-california-housing-test.md  004-ml-efficiency-evaluation.md  (+11 more)
(+41 files in other folders)
