[project]
name = "seds500-graduation-project"
version = "0.1.0"
description = "Tabular Data Augmentation using Diffusion Models"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "ipykernel>=6.0.0",
    "imbalanced-learn>=0.14.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
cuda = ["torch>=2.0.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
